# dora-lead-time-metric

./: .env.example  .env.params.example  .gitignore  Dockerfile  README.md  calculate-dora-lead-time-metric.md  conftest.py  design-notes.md  docker-compose.yml  error-handling-improvements.md  lead-time-analysis.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: build-test.yml  docker-build.yml  publish-docker.yml  publish-pypi.yml  publish-testpypi.yml
dora_lead_time/: __init__.py  api_client.py  atlassian_requests.py  database_processor.py  date_utility.py  exceptions.py  github_requests.py  lead_time_report.py  main.py  models.py  outlier_reports.py
dora_lead_time/migrations/: __init__.py
dora_lead_time/migrations/add_jira_issue_id_to_stories/: migrate_add_jira_issue_id_to_stories.sql  run_migration.py
dora_lead_time/migrations/drop_invalid_story_key_fk/: __init__.py  migrate_drop_invalid_story_key_fk.sql  run_migration.py
dora_lead_time/outlier_reports/: A_projects_without_releases.sql  B_releases_with_open_stories.sql  C_stories_in_multiple_releases.sql  D_releases_with_open_pull_requests.sql  E_counts_of_stories_without_pull_requests.sql  E_releases_modified_after_release_date.sql  E_stories_without_pull_requests.sql  F_pull_requests_with_old_commits.sql  F_releases_with_shared_stories.sql  F_stories_in_multiple_releases.sql  G_pull_requests_in_multiple_stories.sql  G_pull_requests_with_old_commits.sql  G_zero_or_negative_lead_times.sql  H_pull_requests_in_multiple_stories.sql  H_stories_without_pull_requests.sql  I_pull_requests_with_high_complexity.sql  K_releases_without_stories.sql
dora_lead_time/outlier_reports_sql/: A_projects_without_releases.sql  C_stories_in_multiple_releases.sql  D_releases_with_open_pull_requests.sql  E_counts_of_stories_without_pull_requests.sql  E_stories_without_pull_requests.sql  F_pull_requests_with_old_commits.sql
dora_lead_time/schema/: migrate_drop_invalid_story_key_fk.sql  schema.sql
tests/: __init__.py  conftest.py  helpers.py  test_add_jira_issue_id_to_stories_migration.py  test_api_client.py  test_atlassian_requests.py  test_database_processor.py  test_date_utility.py  test_drop_invalid_story_key_fk_migration.py  test_exceptions.py  test_github_requests.py  test_lead_time_report.py  test_main.py  test_outlier_reports.py  test_transaction_context_manager.py
