[tool.poetry]
requires-poetry = ">=2.0,<3.0"

[project]
name = "dora-lead-time-metric"
description = "A tool to calculate the DORA Lead Time metric"
version = "1.1.4"
authors = [
    {name = "Sualeh Fatehi",email = "sualeh@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "pycobertura (>=4.0.0,<5.0.0)",
    "black (>=24.2.0,<25.0.0)",
    "pylint (>=3.0.2,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Required since the package name is not the same as the module name
[[tool.poetry.packages]]
include = "dora_lead_time"

[project.scripts]
dora-lead-time-metric = "dora_lead_time.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=dora_lead_time --cov-report=term-missing"

[tool.coverage.run]
source = ["dora_lead_time"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
